--- a/package.json
+++ b/package.json
@@ -11,8 +11,23 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.3.1",
     "nuxt": "^3.8.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@pinia/nuxt": "^0.5.1",
+    "flowbite": "^2.1.1",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
